Bug 951175 - [RTSP] Disabling the hotspot will cause a system crash while playing RTSP streaming. r=sworkman, a=1.3+