netwerk/protocol/rtsp/rtsp/RTSPSource.cpp
@@ -584,7 +584,6 @@ void RTSPSource::onDisconnected(const sp<AMessage> &msg) {
 void RTSPSource::finishDisconnectIfPossible() {
     if (mState != DISCONNECTED) {
         mHandler->disconnect();
-        return;
     }
 
     (new AMessage)->postReply(mDisconnectReplyID);
